apps/kube-system/hubble-ui/overlays/production/hubble-relay-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-relay
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hubble-relay.apps.lab.mxe11.nl
spec:
  parentRefs:
    - name: cilium-secure-gateway
      namespace: cilium-gateway-system
  hostnames: [hubble-relay.apps.lab.mxe11.nl]
  rules:
    - backendRefs:
        - name: hubble-relay
          port: 80
